--- a/treeMenu.css
+++ b/treeMenu.css
@@ -84,19 +84,20 @@ a{
 }
 /*箭头*/
 .monster-treeMenu-link-arrow:after{
+    width:0;
+    height:0;
+    border-top:5px solid transparent;
+    border-bottom:5px solid transparent;
+    border-left:8px solid #fff;
     position: absolute;
     content: '';
-    width: .45em;
-    height: .45em;
-    border-width: 2px 0 0 2px;
-    border-style: solid;
     right: 1em;
-    transform: rotate(134deg) translate(0, -50%);
     transform-origin: top;
     top: 47%;
-    transition: all .3s ease-out;
+    transition: all .2s ease-out;
+    transform: rotate(0deg) translate(0, -50%);
 }
 .monster-treeMenu-item>.monster-treeMenu-link-active:after{
-    transition: all .3s ease-out;
-    transform: rotate(225deg) translate(0, -50%);
+    transition: all .2s ease-out;
+    transform: rotate(90deg) translate(0, -50%);
 }
