--- a/treeMenu.css
+++ b/treeMenu.css
@@ -1,8 +1,3 @@
-@media (min-width: 768px) {
-    .left-sidebar{
-        width:65px;
-    }
-}
 html,body{
     margin:0;
     padding:0;
@@ -36,34 +31,36 @@ a{
     position:relative;
 }
 /*设置li的间距形成树形样式结构*/
-.monster-treeMenu .monster-treeMenu-link-child >.monster-treeMenu-item{
+.monster-treeMenu-li-level2>.monster-treeMenu-link-level2{
   padding-left:20px;
 }
-/*鼠标经过第一排菜单的样式*/
-.monster-treeMenu-nav>.monster-treeMenu-nav-ul>li>a:hover{
-    opacity: 1;
-    font-weight: bolder;
-    background: #136eb5;
+.monster-treeMenu-li-level3>.monster-treeMenu-link-level3{
+    padding-left:40px;
 }
-/*普通菜单鼠标经过的样式*/
-.monster-treeMenu .monster-treeMenu-link:hover{
+.monster-treeMenu-li-level4>.monster-treeMenu-link-level4{
+    padding-left:60px;
+}
+
+/*鼠标经过第一排菜单的样式*/
+.monster-treeMenu-nav-ul>li>a:hover{
     opacity: 1;
-    font-weight: bolder;
+    background: #136eb5;
 }
 /*a链接的样式*/
 .monster-treeMenu-link{
+    width:100%;
     padding: 14px 0 14px 10px;
     display: flex;
     white-space: nowrap;
     align-items: center;
     line-height: 25px;
     color: #fff;
-    opacity: .6;
 }
 /*左边的icon大小等*/
 .monster-treeMenu-link i{
     margin-right:10px;
     font-size:16px;
+    opacity:.6;
 }
 /*默认菜单字体大小*/
 .monster-treeMenu-link .monster-treeMenu-linkName{
@@ -86,9 +83,9 @@ a{
 .monster-treeMenu-link-arrow:after{
     width:0;
     height:0;
-    border-top:5px solid transparent;
-    border-bottom:5px solid transparent;
-    border-left:8px solid #fff;
+    border-right:5px solid transparent;
+    border-left:5px solid transparent;
+    border-top:7px solid #fff;
     position: absolute;
     content: '';
     right: 1em;
@@ -99,5 +96,5 @@ a{
 }
 .monster-treeMenu-item>.monster-treeMenu-link-active:after{
     transition: all .2s ease-out;
-    transform: rotate(90deg) translate(0, -50%);
+    transform: rotate(180deg) translate(0, -50%);
 }
