--- a/treeMenu.css
+++ b/treeMenu.css
@@ -16,7 +16,7 @@ a{
 }
 /*左侧导航*/
 .monster-treeMenu{
-    width:240px;
+    width:280px;
     position:fixed;
     height:100%;
     background:#188ae2;
@@ -30,18 +30,7 @@ a{
     height:calc(100% - 20px);
     position:relative;
 }
-/*设置li的间距形成树形样式结构*/
-.monster-treeMenu-li-level2>.monster-treeMenu-link-level2{
-  padding-left:20px;
-}
-.monster-treeMenu-li-level3>.monster-treeMenu-link-level3{
-    padding-left:40px;
-}
-.monster-treeMenu-li-level4>.monster-treeMenu-link-level4{
-    padding-left:60px;
-}
-
-/*鼠标经过第一排菜单的样式*/
+/*鼠标经过菜单的样式*/
 .monster-treeMenu-nav-ul>li>a:hover{
     opacity: 1;
     background: #136eb5;
@@ -49,15 +38,16 @@ a{
 /*a链接的样式*/
 .monster-treeMenu-link{
     width:100%;
-    padding: 14px 0 14px 10px;
+    padding: 14px 0 14px 0;
     display: flex;
     white-space: nowrap;
     align-items: center;
     line-height: 25px;
     color: #fff;
+    position:relative;
 }
 /*左边的icon大小等*/
-.monster-treeMenu-link i{
+.monster-treeMenu-link>i{
     margin-right:10px;
     font-size:16px;
     opacity:.6;
@@ -71,7 +61,7 @@ a{
     display:none;
 }
 /*子级菜单字体变小*/
-.monster-treeMenu .monster-treeMenu-link-child>li>a>.fa-circle-o-notch {
+.monster-treeMenu .monster-treeMenu-link-child>li>a>.fa-circle-o-notch{
     width: 16px;
     font-size: 12px;
 }
@@ -89,11 +79,11 @@ a{
     position: absolute;
     content: '';
     right: 1em;
-    transform-origin: top;
     top: 47%;
     transition: all .2s ease-out;
     transform: rotate(0deg) translate(0, -50%);
 }
+/*箭头上去*/
 .monster-treeMenu-item>.monster-treeMenu-link-active:after{
     transition: all .2s ease-out;
     transform: rotate(180deg) translate(0, -50%);
